--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -59,13 +59,11 @@ techniques, we can visualize the abundances at Phylum level.
 library(ggplot2)
 
 # Add clr-transformation on samples
-assay(tse_phylum, "pseudo") <- assay(tse_phylum, "counts") + 1
-tse_phylum <- transformCounts(tse_phylum, assay.type = "pseudo",
-                              method = "relabundance")
+tse_phylum <- transformCounts(tse_phylum, assay.type = "counts",
+                              method = "relabundance", pseudocount = 1)
 
-tse_phylum <- transformCounts(tse_phylum,
-                  assay.type = "relabundance",
-		  method = "clr")
+tse_phylum <- transformCounts(tse_phylum, assay.type = "relabundance",
+                              method = "clr", pseudocount = 1)
 
 # Add z-transformation on features (taxa)
 tse_phylum <- transformCounts(tse_phylum, assay.type = "clr", 
