Add RDA exercises

--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -256,8 +256,7 @@ It aims to maximize the variance in respect of covariates. The results shows how
 each covariate affects.
 
 ```{r microbiome_RDA1}
-# Load libraryd packages
-
+# Load packages
 library(vegan)
 library(stringr)
 library(knitr)
@@ -485,7 +484,7 @@ plotReducedDim(tse_Genus[,colData(tse_Genus)$Group==FALSE],
 
 
 
-### Testing differences in community composition between sample groups
+### Testing differences in community composition between sample groups {#dbrda-workflow}
 
 The permutational analysis of variance (PERMANOVA) [@Anderson2001] is
 a widely used non-parametric multivariate method that can be used to
