--- a/90_acknowledgments.Rmd
+++ b/90_acknowledgments.Rmd
@@ -1,5 +1,4 @@
-
-# Contributors {-}
+# Authors and contributors {-}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -7,45 +6,61 @@ chapterPreamble()
 ```
 
 
-### *Chandler Ross, PhD* {-}
+### *Leo Lahti, DSc* {-}
 
-Chandler Ross is a PhD researcher at Turku Data science group research team.His research interest is mainly into Eco-Evolutionary Dynamics, Statistical Modelling and Time Series.
+Leo Lahti is professor in Data Science at the [Department of Computing, University of Turku, Finland](https://datascience.utu.fi/), with computational microbiome analysis as a key research area. Lahti obtained doctoral degree (DSc) from Aalto University in Finland (2010), developing probabilistic machine learning and data integration methods for high-throughput life science data. Since 2011 he switched to microbiome research and developed, among other things, the _phyloseq_-based [microbiome R package](https://bioconductor.org/packages/release/bioc/html/microbiome.html) before starting to develop the mia libraries and _TreeSummarizedExperiment_ / _MultiAssayExperiment_ framework for microbiome data science introduced in this gitbook. In addition to carrying out computational microbiome research, Lahti is in the editorial board of _ISME_ and _Microbiome_ journals, work group leader in the European COST action network [ML4microbiome](https://ml4microbiome.eu/), national delegate in the International Science Council Committee on Data ([CODATA](https://codata.org/)), and led the development of [national policy on open access to research methods in Finland](https://avointiede.fi/en/policies-materials/policies-open-science-and-research-finland/policy-open-research-data-and-methods). He is current member in the [Bioconductor Community Advisory Board](https://bioconductor.org/about/community-advisory-board/) and runs regular training workshops in microbiome data science.
 
-### *Chouaib Benchraka, Msc* {-}
 
-Chouaib Benchraka is a research assistant at Turku data science research group.He is interested working with Machine Learning and Data Science researches.
+### *Tuomas Borman* {-}
 
-### *Felix Ernst, PhD* {-}
+Tuomas Borman is a PhD researcher at the Department of Computing, University of Turku, and one of the key developers of the [mia package family](https://microbiome.github.io). He has helped to set up the base ecosystem of data containers, packages, and tutorials.
 
-Felic Ernst is among the developers who participated in the development of [miaverse](https://microbiome.github.io) which is open source project developing R/Bioc methods, benchmarking data, and educational material for microbiome research based on the SummarizedExperiment class and its derivatives.
 
 ### *Giulio Benedetti, Research Assistant* {-}
 
-Guilio Benedetti is a research assistant at Turku data science research group. His research  interest  is mostly related to  Data Science.
+Giulio Benedetti is a research assistant at the Department of Computing, University of Turku. His research interest is mostly related to Data Science. He has also helped to expand the SummarizedExperiment-based microbiome analyses to the Julia language and implemented the [MicrobiomeAnalysis.jl](https://github.com/JuliaTurkuDataScience/MicrobiomeAnalysis.jl) package.
 
-### *Henrik Eckermann, PhD* {-}
 
-Henerik Eckermann is PhD researcher at the research group Turku data science. His research interest is in Human microbiome bioinformatics.
+### *Felix Ernst, PhD* {-}
 
-### *Leo Lahti, Professor* {-}
+Felic Ernst is among the first developers of R/Bioc methods for microbiome research based on the _SummarizedExperiment_ class and its derivatives.
 
-Leo Lahti is the group leader for the research team at Turku data science and professor in Data Science in University of Turku, Finland. His research team focuses on computational analysis and modeling of complex natural and social systems. Lahti obtained doctoral degree (DSc) in statistical machine learning and bioinformatics from Aalto University in Finland (2010), developing probabilistic data integration methods for high-throughput life science data.
 
-### *Shigdel Rajesh, PhD* {-}
 
-Shigdel Rajesh was a visiting scholar to Turku data science group.His research interest is mainly related to bioinformatics, microbiome data analysis. 
+### Contributors {-}
 
-### *Sudarshan Shetty, PhD* {-}
 
-Sudarshan Shetty is one of the key developers in the [miaverse](https://microbiome.github.io) R/Bioconductor package for microbiome bioinformatics based on (Tree)SummerizedExperiment. 
+Some of the key contributors include:
 
-### *Tuomas Borman, PhD* {-}
+- *Sudarshan Shetty, PhD*
 
-Tuomas Borman is a PhD researcher and one of the key developers of [miaverse](https://microbiome.github.io). He participated in setting up the base ecosystem of data containers, packages, and tutorials with other team members.
+- *Shigdel Rajesh, PhD*, 
 
-### *Yağmur Şimşek, *{-}
+- *Henrik Eckermann*, PhD 
 
-Yağmur Şimşek was a research assistant at the Turku data science reseach group when she contributed to this work.
+- *Chouaib Benchraka*
+
+- *Yağmur Şimşek* 
+
+- *Artur Sannikov*
+
+- *Basil Courbayre*
+
+- *Jeba Akewak*
+
+- *Himmi Lindgren*
+
+- *Lu Yang*
+
+The full list of contributors is available via [Github](https://github.com/microbiome/OMA/graphs/contributors).
+
+
+We would also like to thank everyone who contributed to the R packages
+supporting the _TreeSummarizedExperiment_ ecosystem for microbiome
+research. These include but are not limited to: mia, miaViz, miaTime,
+miaSim, philr, ANCOMBC, curatedMetagenomicData, scater, scuttle, and
+other packages.
+
 
 
 ### Acknowledgments {-}
@@ -59,10 +74,8 @@ fields [@Gentleman2004, @Huber2015]. The developers and contributors
 of this online tutorial are listed in Chapter \@ref(contributors).
 
 The base ecosystem of data containers, packages, and tutorials was set
-up as a collaborative effort by Tuomas Borman, Henrik Eckermann,
-Chouaib Benchraka, Chandler Ross, Shigdel Rajesh, Yağmur Şimşek,
-Giulio Benedetti, Sudarshan Shetty, Felix Ernst, and [Leo
-Lahti](http://www.iki.fi/Leo.Lahti).
+up as a collaborative effort by Tuomas Borman, Yağmur Şimşek, Giulio
+Benedetti, Felix Ernst, and [Leo Lahti](http://www.iki.fi/Leo.Lahti).
 
 The work has been supported by the COST Action network on Statistical
 and Machine Learning Techniques for Human Microbiome Studies
