--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -61,7 +61,7 @@ devtools::install_github("microbiome/mia")
 ```
 
 
-## Package ecosystem 
+## Package ecosystem {#ecosystem}
 
 Methods for the analysis and manipulation of
 `(Tree)SummarizedExperiment` and `MultiAssayExperiment` data
