--- a/book.bib
+++ b/book.bib
@@ -446,6 +446,23 @@ year = {2022}
   doi =		 {10.1038/s41598-017-16520-0}
 }
 
+
+
+
+
+@Article{Ernst2020,
+  title =	 {The emerging R ecosystem for microbiome research},
+  author =	 {Ernst, F.G.M. and Shetty, S.A. and Huang, R. and
+                  Braccia D.J. and Bravo H.C. and Lahti, L.},
+  year =	 2020,
+  volume =	 9,
+  issue =	 1459,
+  journal =	 {F1000Research},
+  note =	 {A poster.},
+  url =		 {https://doi.org/10.7490/f1000research.1118445.1}
+}
+
+
 @Manual{R_Biobase,
   title =	 {Biobase: Base functions for Bioconductor},
   author =	 {R. Gentleman and V. Carey and M. Morgan and
