--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -64,11 +64,12 @@ The original count-based taxonomic abundance tables may have different
 transformations, such as logarithmic, Centered Log-Ratio (CLR), or relative 
 abundance. These are typically stored in _**assays**_.
 
+Let us load example data and rename it as tse.
+
 ```{r}
 library(mia)
-data(GlobalPatterns, package="mia")
-tse <- GlobalPatterns
-assays(tse)
+data(hitchip1006, package="miaTime")
+tse <- hitchip1006
 ```
 
 The `assays` slot contains the experimental data as multiple count matrices. The result of `assays` is a list of matrices.
@@ -99,8 +100,8 @@ assay(tse, "relabundance")[1:5,1:7]
 ```
 
 
-Here the dimension of the count data remains unchanged. This is in
-fact, a requirement for any `SummarizedExperiment` object.
+Here the dimension of the count data remains unchanged in
+transformation. This is in fact, a requirement for the assays.
 
 
 
@@ -172,11 +173,13 @@ agglomerated at different taxonomic levels. However, the data could as
 well originate from entirely different measurement sources as long as
 the samples match.
 
-Let us first agglomerate the data to Phylym level. This yields a new TreeSE data object.
+Let us first agglomerate the data to Phylum level. This yields a new
+TreeSE data object.
+
 
 ```{r altexp_agglomerate}
-tse_phylum <- agglomerateByRank(tse, "Phylum")
-# both have the same number of columns (samples)
+tse_phylum <- agglomerateByRank(tse, "Phylum", na.rm=TRUE)
+# Both have the same number of columns (samples)
 dim(tse)
 dim(tse_phylum)
 ```
@@ -271,13 +274,6 @@ Load the `GlobalPatterns` data from the `mia` package:
 ```{r, message=FALSE}
 data("GlobalPatterns", package="mia")
 GlobalPatterns
-```
-
-
-Check the documentation for this dataset:
-
-```{r, message=FALSE, echo=FALSE}
-help(GlobalPatterns)
 ```
 
 
