--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -116,7 +116,7 @@ head(getUniqueTaxa(tse, rank = "Phylum"))
 ```
 
 
-### Generate a taxonomic tree on the fly
+### Generate a taxonomic tree on the fly {#fly-tree}
 
 To create a taxonomic tree, `taxonomyTree` used the information and returns a
 `phylo` object. Duplicate information from the `rowData` is removed.
@@ -167,7 +167,7 @@ assay(altExp(tse, "Family"), "counts")[1:5,1:7]
 any taxonomic level listed in `mia::taxonomyRanks(tse)`.   
 
 
-## Data transformation
+## Data transformation {#assay-transform}
 
 Data transformations are common in microbiome analysis. Examples
 include the logarithmic transformation, calculation of relative
@@ -202,7 +202,7 @@ head(assay(tse, "pa"))
 assays(tse)
 ```
 
-## Pick specific  
+## Pick specific {#pick-specific}
 
 Retrieving of specific elements that are required for specific analysis. For
 instance, extracting abundances for a specific taxa in all samples or all taxa 
