--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -37,8 +37,8 @@ library(bluster)
 tse <- transformCounts(tse, method = "relabundance")
 ```
 
-The main focus here will be how to use mia's `cluster` function to do the 
-clustering. It has multiple parameters that allow you to shape the result.
+The main focus here will be how to use mia's `cluster` function to 
+cluster. It has multiple parameters that allow you to shape the result.
 * The main new parameter allows you to choose the algorithm you want to use. 
 In this example, we will use HclustParam which does the hierarchical 
 clustering. This parameter itself has parameters on its own, you can check
@@ -479,6 +479,7 @@ _cobiclust_ which is designed for microbial data.
 Load example data
 ```{r load-pkg-data2}
 library(mia)
+library(cobiclust)
 data("HintikkaXOData")
 mae <- HintikkaXOData
 ```
@@ -570,18 +571,16 @@ matrices in general.
 
 ```{r biclust_1}
 # Samples must be in equal order
-# (Only 1st experiment  was ordered in cobiclust step leading to unequal order)
+# (Only 1st experiment was ordered in cobiclust step leading to unequal order)
 mae[[1]] <- mae[[1]][, colnames(mae[[2]])]
 
-# Make rownames unique since it is require by other steps
+# Make rownames unique since it is required by other steps
 rownames(mae[[1]]) <- make.unique(rownames(mae[[1]]))
+
 # Calculate correlations
-corr <- getExperimentCrossCorrelation(mae, 1, 2,
-  assay.type1 = "rclr",
-  assay.type2 = "nmr",
-  mode = "matrix",
-  cor_threshold = 0.2
-)
+corr <- getExperimentCrossCorrelation(mae, 1, 2, assay.type1 = "rclr",
+                                      assay.type2 = "nmr", mode = "matrix",
+                                      cor_threshold = 0.2)
 ```
 
 
