--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -27,6 +27,9 @@ a capital first letter.
 * the columns must be given in the order shown above
 * column can be omited, but the order must remain
 
+In this chapter, we will refer to co-abundant groups as CAGs, which are
+clusters of taxa that co-vary across samples.
+
 ## Assigning taxonomic information.
 
 There are a number of methods to assign taxonomic information. We like to give
@@ -167,7 +170,7 @@ assay(altExp(tse, "Family"), "counts")[1:5,1:7]
 any taxonomic level listed in `mia::taxonomyRanks(tse)`.
 
 ### Taxa clustering {#taxa-clustering}
-Another way to agglomerate the data is to do clustering on the taxa. To do so,
+Another way to agglomerate the data is to cluster on the taxa. To do so,
 we usually start by doing a compositionality aware transformation such as CLR, 
 followed by the application of a standard clustering method. 
 
@@ -180,25 +183,48 @@ First, we import the library `bluster` that simplifies the clustering. We
 library(bluster)
 ```
 
-Then we do the CLR transform followed by the clustering.
+Then we do the CLR transform followed by the clustering. We will cluster with
+two different distances: the euclidean distance and 
 
 ```{r taxa_clustering}
+# Get the data
+data("peerj13075", package = "mia")
+tse <- peerj13075
+
 # The result of the CLR transform is stored in the assay clr
 tse <- transformCounts(tse, assay.type = "counts", method = "clr", 
-                       pseudocount = 1, MARGIN = "features")
+                       pseudocount = 1)
 
-# We do the clustering on the features of the clr assay 
-tse <- cluster(tse, assay.type = "clr", HclustParam(method = "ward.D2"), 
-               MARGIN = "features", clust.col = "hclust")
+tse <- transformCounts(tse, assay.type = "clr", method = "z", MARGIN = "features")
+
+# Cluster (with euclidean dist) on the features of the z assay 
+tse <- cluster(tse, assay.type = "z",
+               clust.col = "hclustEuclidean", MARGIN = "features",
+               HclustParam(dist.fun = stats::dist, metric = "euclidean",
+                           method = "ward.D2"))
+
+# Declare the Kendall dissimilarity computation function
+kendall_dissimilarity <- function(x) {
+    as.dist(1 - cor(t(x), method = "kendall"))
+}
+
+# Cluster (with Kendall dissimilarity) on the features of the z assay 
+tse <- cluster(tse, assay.type = "z", MARGIN = "features", 
+               clust.col = "hclustKendall",
+               HclustParam(method = "ward.D2", 
+                           dist.fun = kendall_dissimilarity))
 ```
 
-The result is stored in the `rowData` column specified with the `clust.col` 
-parameter.
+Let us store the resulting cluster indices in the `rowData` column specified 
+with the `clust.col` parameter.
 
 ```{r taxa_clustering_result}
 # Checking the clusters
-clusters <- rowData(tse)$hclust
-head(clusters, 10)
+clusters_euclidean <- rowData(tse)$hclustEuclidean
+head(clusters_euclidean, 10)
+
+clusters_kendall <- rowData(tse)$hclustKendall
+head(clusters_kendall, 10)
 ```
 
 To better visualize the results and the distribution of the clusters, we can 
@@ -206,19 +232,24 @@ plot the histogram of the clusters.
 
 ```{r taxa_clustering_histogram}
 library(ggplot2)
-ggplot(data.frame(clusters = clusters), aes(x = clusters)) + 
-    geom_histogram(stat = "count") + 
-    labs(title = "Histogram of clusters occurrence amongst the features",
-       x = "Clusters", y = "Feature count") +
-    theme(plot.title = element_text(hjust = 0.5))
+library(patchwork) # For arranging several plots as a grid
+plot1 <- ggplot(as.data.frame(rowData(tse)), aes(x = clusters_euclidean)) + 
+    geom_bar() + 
+    labs(title = "CAG size distribution (Euclidean distance)",
+         x = "Clusters", y = "Feature count (n)")
+plot2 <- ggplot(as.data.frame(rowData(tse)), aes(x = clusters_kendall)) + 
+    geom_bar() + 
+    labs(title = "CAG size distribution (1 - tau distance)",
+         x = "Clusters", y = "Feature count (n)")
+plot1 + plot2 + plot_layout(ncol = 2)
 ```
 
 
 It's also possible to merge the rows by cluster.
 
 ```{r taxa_clustering_row_merge}
-# Merging the rows by cluster
-tse_merged <- mergeRows(tse, clusters)
+# Aggregate clusters as a sum of each cluster values
+tse_merged <- mergeRows(tse, clusters_euclidean)
 tse_merged
 ```
 We can note that it worked as planned since there were 6 clusters and there are
